[package]
name = "pontos_cli"
version = "0.1.0"
edition = "2021"
authors = ["Arvid Sörfeldt <sorfeldt@student.chalmers.se>"]
description = "A CLI for accessing the PONTOS datahub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive", "cargo"] }
csv = "1.3.0"
postgrest = "1.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = { version = "1.35.0", features = ["full"] }
